force-app/main/default/objects/Solucion_Tecnica__c/Solucion_Tecnica__c.object-meta.xml
<CustomObject>
    <description>Soluciones técnicas propuestas para un hallazgo específico del levantamiento.</description>
    <label>Solución Técnica</label>
    <nameField>
        <label>Nombre de la Solución</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Soluciones Técnicas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>