force-app/main/default/objects/Solucion_Tecnica__c/fields/Descripcion_Detallada__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Detallada__c</fullName>
    <label>Descripción Detallada</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>