force-app/main/default/objects/Solucion_Tecnica__c/fields/Levantamiento_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Levantamiento_Tecnico__c</fullName>
    <description>Vínculo con el hallazgo técnico original.</description>
    <label>Levantamiento Técnico</label>
    <referenceTo>Levantamiento_Tecnico__c</referenceTo>
    <relationshipLabel>Soluciones Técnicas Propuestas</relationshipLabel>
    <relationshipName>Soluciones_Tecnicas</relationshipName>
    
    
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint><required>false</required>
</CustomField>