force-app/main/default/objects/Solucion_Tecnica__c/fields/Observaciones_Comerciales__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Comerciales__c</fullName>
    <description>Notas y observaciones específicas para el proceso de costeo y presupuesto.</description>
    <label>Observaciones de Costeo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>