force-app/main/default/objects/Solucion_Tecnica__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Soluciones Técnicas</relationshipLabel>
    <relationshipName>Soluciones_Tecnicas</relationshipName>
    <type>Lookup</type>
</CustomField>